# wiki-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  llmwiki.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent-memory-mcp-usage.md  mcp-api-reference.md  memory-policy.md  project-development-policy.md
docs/research/: 2026-04-28-context-substrate-memory-core-research.md  2026-04-28-memory-backend-library-spike.md  2026-04-28-semantic-retrieval-and-reasoner-evaluation.md  2026-04-28-semantic-retrieval-spike.md  2026-04-29-graph-health-dependency-decision.md  (+3 more)
experiments/: README.md  mcp_semantic_demo.py  semantic_retrieval_eval_cases.json  semantic_retrieval_spike.py
tests/: test_api_docstrings.py  test_context_pack_contract.py  test_crystallize_projection.py  test_document_chunker.py  test_dream_service.py  test_external_wiki_projection.py  test_graph_backend.py  test_graph_backend_factory.py  test_graph_health_report.py  test_graph_sync_service.py  test_knowledge_payload_contracts.py  test_kuzu_graph_backend.py  test_lance_semantic_index.py  test_lint_enhanced.py  test_maintain_graph_reindex.py  test_maintain_semantic_reindex.py  test_maintain_service.py  test_mcp_configured_graph_backend.py  test_mcp_graph_backend_options.py  test_mcp_host_smoke.py  test_mcp_semantic_backend_options.py  test_mcp_server.py  test_mcp_tools.py  test_memory_config.py  test_memory_core_contract.py  test_obsidian_projection.py  test_phase1_acceptance.py  test_query_expand_many.py  test_query_graph_backend.py  test_query_normalization.py  test_query_semantic.py  test_remember_governance.py  test_remember_graph_sync.py  test_remember_projection.py  test_repair_missing_references.py  test_repo_code_map_query.py  test_retrieval_benchmark.py  test_semantic_index_service.py  test_semantic_provider_cache.py  test_structure_validation.py  (+1 more)
(+116 files in other folders)
