[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-substrate"
version = "0.3.0"
description = "Graph-backed memory substrate for agents, with derived wiki projections."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.scripts]
memory-substrate-mcp = "memory_substrate.interfaces.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_substrate"]
