[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-substrate"
version = "0.4.0"
description = "Graph-backed memory substrate for agents, with derived wiki projections."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "tree-sitter-language-pack==1.6.0",
]

[project.optional-dependencies]
kuzu = [
    "kuzu>=0.11.2",
]
semantic = [
    "FlagEmbedding>=1.4.0",
    "lancedb>=0.25.3",
]

[project.scripts]
memory-substrate-mcp = "memory_substrate.interfaces.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_substrate"]
